--- a/@hubblecommerce/hubble/core/assets/scss/hubble/components/view-category.scss
+++ b/@hubblecommerce/hubble/core/assets/scss/hubble/components/view-category.scss
@@ -92,7 +92,7 @@
 @media(min-width: 768px) {
     .view-category, .view-catalogsearch {
         .category-header {
-            margin-bottom: 20px;
+            margin-bottom: 0px;
             min-height: 170px;
 
             .title {
